--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,12 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
+        "barryvdh/laravel-snappy": "^1.0",
+        "chillerlan/php-qrcode": "^5.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "phpmailer/phpmailer": "^6.10",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "yajra/laravel-datatables-oracle": "^12.1"
     },
     "require-dev": {
